# TrigonometricRadicals

./: .gitignore  Cargo.toml
.github/workflows/: latex.yml  rust.yml
i18n/background/: data.wl  utils.md
i18n/background/raw/: raw_1.md  raw_10.md  raw_100.md  raw_101.md  raw_102.md  raw_103.md  raw_104.md  raw_105.md  raw_106.md  raw_107.md  raw_109.md  raw_11.md  raw_110.md  raw_111.md  raw_112.md  raw_113.md  raw_114.md  raw_115.md  raw_116.md  raw_117.md  raw_118.md  raw_119.md  raw_12.md  raw_121.md  raw_122.md  raw_123.md  raw_124.md  raw_125.md  raw_127.md  raw_128.md  raw_129.md  raw_13.md  raw_130.md  raw_131.md  raw_132.md  raw_133.md  raw_134.md  raw_135.md  raw_136.md  raw_137.md  (+236 more)
i18n/background/rewrite/: raw_10.md  raw_12.md  raw_13.md  raw_15.md  raw_17.md  raw_19.md  raw_2.md  raw_22.md  raw_23.md  raw_24.md  raw_25.md  raw_29.md  raw_3.md  raw_31.md  raw_33.md  raw_36.md  raw_37.md  raw_39.md  raw_4.md  raw_43.md  raw_46.md  raw_47.md  raw_49.md  raw_5.md  raw_55.md  raw_58.md  raw_59.md  raw_6.md  raw_62.md  raw_63.md  raw_64.md  raw_65.md  raw_71.md  raw_81.md  raw_82.md  raw_85.md  raw_89.md  raw_9.md  raw_90.md
i18n/frac-17/: check.wl
i18n/frac-257/: check.wl
i18n/frac-7/: Readme.md  check.wl  other.md
projects/core-data/background/: raw.md  utils.md
projects/core-data/frac-10/: check.wl
projects/core-data/frac-11/: Readme.md  all.md  check.wl
projects/core-data/frac-12/: Readme.md  check.wl
projects/tex-book/: Tectonic.toml  index.tex
projects/trig-to-nest/: Readme.md
projects/trig-to-radicals/: Cargo.toml
(+236 files in other folders)
