[workspace]
members = ["projects/*"]
default-members = [
    "projects/trig-to-radicals"
]
exclude = [
    "projects/.DS_Store",
    "projects/core-data",
    "projects/tex-book",
    "projects/trig-to-nest"
]


[profile.dev]
opt-level = 1
incremental = true

[profile.release]
lto = true
panic = "abort"
